fixed calendar animation spacing issue

--- a/style.css
+++ b/style.css
@@ -704,6 +704,7 @@ li:before {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 2em 0 2em 0;
 }
 
 .calendar-container {
